--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "doctrine/dbal": "^2.5"
     },
     "autoload": {
+      "psr-4": {
         "Jdomenechb\\Doctrine\\DBAL\\": "src/"
+      }
     }
 }
